fix specific small width layout issues

--- a/ProgrammingProject/wwwroot/scss/_variables.scss
+++ b/ProgrammingProject/wwwroot/scss/_variables.scss
@@ -19,3 +19,10 @@ $headings-font-family: "BoldenVan";
 $small: 576px;
 $medium: 768px;
 $large: 992px;
+
+$position-values: ( 
+    0: 0, 
+    10: 10%,
+    50: 50%, 
+    100: 100% 
+);
