--- a/ProgrammingProject/wwwroot/scss/site.scss
+++ b/ProgrammingProject/wwwroot/scss/site.scss
@@ -78,7 +78,6 @@ body {
 
 /* footer */
 /********************************************************************/
-
 footer {
     background-color: $primary;
     text-align: center;
@@ -106,3 +105,24 @@ footer {
 }
 /********************************************************************/
 /* end landing styling */
+
+/* dog card */
+/********************************************************************/
+.dog-card {
+    width: 18rem;
+
+    @include media-breakpoint-down(md) {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+/********************************************************************/
+/* end dog card styling*/
+
+/* session row */
+/********************************************************************/
+.session-card {
+
+}
+/********************************************************************/
+/* end session row styling*/
